--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     
 }
 .line{
-    border-left: 4px solid grey;
+    border-left: 4px solid rgb(145, 65, 65);
     height: 77px;
 }
 .mission{
@@ -33,6 +33,7 @@ body{
     
 
 }
+
 
 section{
     
@@ -74,7 +75,7 @@ section{
 
 }
 #web-tech{
-    background-color: rgb(11, 41, 31);
+    background-color:rgba(79, 165, 79, 0.87);
     background-image: url(images/illustrators/illustrator-2.png);
     background-repeat: no-repeat;
     background-size: 150px;
@@ -83,7 +84,7 @@ section{
 
 }
 #web-task{
-    background-color: rgb(0, 116, 77);
+    background-color: powderblue;
     background-image: url(images/illustrators/illustrator-3.png);
     background-repeat: no-repeat;
     background-size: 150px;
@@ -91,3 +92,25 @@ section{
 
 
 }
+
+.section-3 img{
+    
+    width: 300px;
+    background-position: 50%;
+    background-size: cover;
+    
+    
+
+}
+.sec-3 {
+    margin-left: 12px;
+}
+footer p{
+    text-align: center;
+
+}
+
+.Footer-color{
+    background-color: skyblue;
+}
+
